# ConvNetCpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  travis.yml
ConvNetCpp/: Activation.h  Layer.cpp  Layer.h  MNIST.cpp  MNIST.h  Model.cpp  Model.h  main.cpp  test.cpp  test.h
res/shape_map/: y_test
res/shape_map/dstm/: saved_distance_map.dstm
res/shape_map/train/0/HORIZON/: 0.shp  1.shp  10.shp  11.shp  12.shp  13.shp  14.shp  15.shp  16.shp  17.shp  18.shp  19.shp  2.shp  3.shp  4.shp  5.shp  6.shp  7.shp  8.shp  9.shp
res/shape_map/train/0/UPPER_LEFT/: 0.shp  1.shp  10.shp  11.shp  12.shp  13.shp  14.shp  15.shp  16.shp  17.shp  18.shp  19.shp  2.shp  3.shp  4.shp  5.shp  6.shp  7.shp  8.shp  9.shp
res/shape_map/train/0/UPPER_RIGHT/: 0.shp  1.shp  10.shp  11.shp  12.shp  13.shp  14.shp  15.shp  16.shp  17.shp  18.shp  19.shp  2.shp  3.shp  4.shp  5.shp  6.shp  7.shp  8.shp  9.shp
src/: AbstractLayer.h  CMakeLists.txt  ConvLayer.cpp  ConvLayer.h  Data.h  GridLayer.h  Layer.cpp  Layer.h  MNIST.cpp  MNIST.h  MaxPoolLayer.h  Model.cpp  Model.h  Optimizer.h  ShapeMap.h  SoftMaxLayer.h  TriangleGridLayer.h  activation.h  config.h  main.cpp
src/data/: BaseDataSet.h  DataSet.h  ImageDataSet.h  ShapeMapDataSet.h
src/helper/: ActivationHelper.h  DataSetHelper.h
src/layer/: ConvLayer.h  GridLayer.h  HexagonConvLayer.h  Layer.h  MaxPoolLayer.h  SoftMaxLayer.h  TriangularLatticeLayer.h
src/util/: IOUtil.h  OSUtil.h  StringUtil.h
tests/: CMakeLists.txt  ShareArgs.h  TestConvLayer.h  TestGridLayer.h  TestLayer.cpp  TestLayer.h  TestMNIST.cpp  TestMNIST.h  TestMaxPoolLayer.h  TestModel.h  TestSoftMaxLayer.h  suite.cpp
tests/data/: TestShapeMapDataSet.h
tests/util/: TestIOUtil.h  TestOSUtil.h
